build(OrderDetails): bugs fixed of dark mode BREAKING CHANGE:

--- a/pages/credit-queue/creditqueue.module.scss
+++ b/pages/credit-queue/creditqueue.module.scss
@@ -132,8 +132,8 @@
 .datatable {
   border-radius: 6px;
   //background: #FFFFFF;
-  border: 1px solid #D2D7E5;
-  box-shadow: 0 3px 6px #CAD0E2;
+  //border: 1px solid #D2D7E5;
+  //box-shadow: 0 3px 6px #CAD0E2;
   .tableFilter {
       padding: 0 15px 0 35px;
       h3 {
