--- a/src/components/ShipmentDetails/index.module.scss
+++ b/src/components/ShipmentDetails/index.module.scss
@@ -1,14 +1,15 @@
 .main {
-    border: 1px solid #D2D7E5;
+    //border: 1px solid #D2D7E5;
     border-radius: 6px;
     margin-top: 20px;
     background-color: #ffffff;
     margin-bottom: 25px;
     .head_container {
-        border-bottom: 3px solid #D9DDE8;
+        //border-bottom: 3px solid #D9DDE8;
             padding: 10px 0px 0px 20px;
 
             .heading{
+                color: #3687e8;
             font-size:22px;
             font-weight: bold;
             text-transform: capitalize;
