--- a/src/components/styles/globals.scss
+++ b/src/components/styles/globals.scss
@@ -169,15 +169,7 @@ body.light-mode .label_heading_login {
   color: #00000080;
   background: #ffffff;
 }
-body.dark-mode .heading_card {
-  color: #3687E8;
 
-}
-
-body.light-mode .heading_card {
-  color: #000000;
-
-}
 
 body.dark-mode .input {
   color: #FFFFFF;
@@ -322,7 +314,7 @@ body.light-mode .lead_main {
 
 }
 body.dark-mode .lead_main {
-  background: #293141;
+  background: #171E27;
 
 }
 body.light-mode .formControl {
@@ -370,11 +362,12 @@ body.dark-mode .status_number {
 
 }
 body.light-mode .datatable {
-  background: #ffffff;
+  box-shadow: 0 3px 6px #CAD0E2;
+  border: 1px solid #D2D7E5;
 
 }
 body.dark-mode .datatable {
-  background: #434E61;
+  box-shadow: 0px 0px 10px #72727234;
 }
 
 body.light-mode .table_heading {
@@ -389,11 +382,13 @@ body.dark-mode .table_heading {
   background: #293141;
 }
 body.light-mode .table_row {
+  background: #ffffff;
   color: #000000;
   border-bottom: 2px solid #F2F5F9;
 }
 body.dark-mode .table_row {
   color:  #FFFFFF80;
+  background: #434E61;
 }
 
 body.light-mode .arrow {
@@ -494,7 +489,7 @@ box-shadow: 0px 0px 10px #72727234;
 }
 body.light-mode .accordion_Text {
 
-  color: #000000 !important;
+  color: #2837566A;
   
 
 }
@@ -546,7 +541,7 @@ body.light-mode .image_arrow {
 }
 
 body.light-mode .accordion_DropDown {
-
+  color: #3687e8;
 background: #F3F4F7;
 
 
@@ -561,9 +556,15 @@ body.dark-mode .accordion_DropDown {
 
 body.light_mode .unit_label {
   color: #2837566A;
-
 }
 
 body.dark_mode .unit_label {
   color: #FFFFFF80; 
+}
+body.light_mode .head_container {
+  border-bottom: 3px solid #D9DDE8 !important;
+}
+
+body.dark_mode .head_container  {
+  border-bottom: 3px solid #434E61;
 }
